# complexity-guard

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
docs/superpowers/plans/: 2026-06-25-complexity-guard.md
docs/superpowers/specs/: 2026-06-25-complexity-guard-design.md
hooks/: cc_hook.sh  posttooluse.py
plugin/.claude-plugin/: plugin.json
plugin/commands/: complexity.md
plugin/hooks/: cc_hook.sh  hooks.json  posttooluse.py
plugin/lib/complexity_guard/: analyze.py  astutils.py  cli.py  langspec.py  models.py  tsadapter.py
plugin/lib/complexity_guard/detectors/: __init__.py  bigo.py  loop_invariant.py  nested_loop.py  repeated_sort.py
scripts/: bundle.sh  release.sh
src/complexity_guard/: analyze.py  astutils.py  cli.py  config.py  parser.py  tsadapter.py  tsdetectors.py
src/complexity_guard/detectors/: __init__.py  bigo.py  loop_invariant.py  membership.py  nested_loop.py  recursion.py  string_concat.py
tests/: test_analyze.py  test_astutils.py  test_bundle_sync.py  test_cli.py  test_config.py  test_hook.py  test_multilang.py  test_parser.py  test_smoke.py  test_version_guard.py
tests/detectors/: test_bigo.py  test_loop_invariant.py  test_membership.py  test_nested_loop.py  test_recursion.py  test_repeated_sort.py  test_string_concat.py
