[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "complexity-guard"
version = "0.1.3"
description = "Flags algorithmic inefficiency of AI-written code at write time"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# Optional: enables structural checks for non-Python languages via tree-sitter.
# Without it, the plugin still works fully for Python and silently skips others.
multilang = ["tree-sitter>=0.25", "tree-sitter-language-pack>=1.0"]

[project.scripts]
complexity-guard = "complexity_guard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
# Put the package on sys.path for the test session so the suite doesn't depend on
# an editable install being present/working (it can silently break across Python
# upgrades). The CLI/hook already run with PYTHONPATH set; this keeps tests aligned.
pythonpath = ["src"]
